<resources>
    <string name="app_name">ShareWay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_by">Order by</string>
    <string name="search">Search</string>
    <string name="by_name">By Name</string>
    <string name="by_date">By Date</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="already_read">Already Read</string>
    <string name="not_read">Not Read</string>
    <string name="order">Order</string>
    <string name="delete_items">Delete Items</string>
    <string name="mark_as_read">Mark As Read</string>
    <string name="filter_mode_prefs">filterMode</string>
    <string name="filter_mode_value">filterModeValue</string>
    <string name="read">Read</string>
    <string name="more_options">More options</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="info">INFO</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_Category_error">Error while trying delete category</string>
    <string name="mark_as_read_category_error">Error while trying mark as read</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="desktop">Desktop</string>
    <string name="open_in_web">Open In Web</string>
    <string name="add_note">Add Note</string>
    <string name="created_on">Created on:</string>
    <string name="title">Title:</string>
    <string name="start_writing">Start writing...</string>
    <string name="titleCap">Title</string>
    <string name="view_notes">View notes</string>
    <string name="login">Login</string>


</resources>