<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/menu_search_previous"
        android:icon="@drawable/ic_baseline_navigate_before_24"
        android:title="@string/previous"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_search_next"
        android:icon="@drawable/ic_baseline_navigate_next_24"
        android:title="@string/next"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />

    <item
        android:id="@+id/desktop_mode"
        android:icon="@drawable/ic_baseline_desktop_windows_24"
        android:title="@string/desktop"
        app:showAsAction="never" />

    <item
        android:id="@+id/open_in_web"
        android:icon="@drawable/ic_baseline_language_24"
        android:title="@string/open_in_web"
        app:showAsAction="never" />



</menu>