<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--    <item-->
    <!--        android:id="@+id/filter"-->
    <!--        android:icon="@drawable/ic_baseline_filter_list_24"-->
    <!--        android:title="Filter"-->
    <!--        app:showAsAction="ifRoom|withText">-->

    <!--        <menu-->
    <!--            >-->
    <!--            <group-->
    <!--                android:id="@+id/order_group"-->
    <!--                android:checkableBehavior="single"-->
    <!--                >-->
    <!--                <item-->
    <!--                    android:id="@+id/name"-->
    <!--                    android:checked="true"-->
    <!--                    android:title="@string/by_name" />-->
    <!--                <item-->
    <!--                    android:id="@+id/date"-->
    <!--                    android:title="@string/by_date" />-->
    <!--            </group>-->
    <!--        </menu>-->

    <!--    </item>-->

    <group android:id="@+id/filter_order_group">
        <item android:title="@string/filter">
            <menu>
                <group
                    android:id="@+id/filter_menu"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/filter_all"
                        android:checked="true"
                        android:title="@string/all" />
                    <item
                        android:id="@+id/filter_already_read"
                        android:title="@string/already_read" />
                    <item
                        android:id="@+id/filter_no_read"
                        android:title="@string/not_read" />
                </group>

            </menu>
        </item>
        <item android:title="@string/order">
            <menu>
                <group
                    android:id="@+id/order_menu"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/order_by_date"
                        android:checked="true"
                        android:title="@string/by_date" />
                    <item
                        android:id="@+id/order_by_name"
                        android:title="@string/by_name" />

                </group>
            </menu>
        </item>
    </group>

</menu>